--- a/src/pages/manage_meds/components/OtcAndScript.css
+++ b/src/pages/manage_meds/components/OtcAndScript.css
@@ -1,22 +1,23 @@
 .component-container {
   width: 75vw;
   background-color: #402d32;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 14px;
-  border-radius: 10px;
+  padding-left: 7px;
+  padding-right: 7px;
+  padding-top: 11px;
+  border-radius: 7px;
+  margin-top: 0;
 }
 
 table {
   background-color: white;
-  border: solid black;
 }
 
 .table-header {
   text-align: center;
   font-weight: 700;
-  background-color: #f2f2f2;
+  background-color: white;
   margin-bottom: 0;
+  font-size: 1.1rem;
 }
 
 
@@ -34,4 +35,7 @@ table {
 }
 
 
+thead {
+  background-color: rgba(131, 166, 8, 0.2);
+}
 
